# level3_recsys_productserving-recsys-12

./: .gitignore  README.md  diary.py  docker-compose.yaml  like.py  main.py  music.py  mysql_config.py  note.ipynb  pyproject.toml  user.py
Data/: user_vecs.pkl  val_interaction.csv
fastapi/: Dockerfile
fastapi/DB/: postgresql_config_container.py
fastapi/DB/test/: text.py
fastapi/als/: ALS.ipynb
fastapi/crud/: user_crud.py
fastapi/goemotions/: multilabel_pipeline.py
fastapi/youtube/: youtube.py
front/: package-lock.json  package.json
front/src/: App.js
front/src/component/: Dashboard.js  Login.js  RecPage.js  SignIn.js  SignUp.js  SignUp.tsx
front/src/component/Blog/: Blog.js  Blog.tsx  Footer.tsx  Header.js  Header.tsx  Main.tsx  MainFeaturedPost.js  MainFeaturedPost.tsx  Markdown.tsx  RecPage.js  RecPage_t.js  Sidebar.tsx  (+6 more)
frontend/material-kit-react/: Dockerfile
goemotions/: model.py  oauth.json  save.py  streamlit.py  test_pipeline.py  tokenizer.pkl  youtube.py
streamlit/: model.py  multilabel_pipeline.py  streamlit.py  youtube.py
whseo_work/fastapi/: __main__.py  main.py
whseo_work/fastapi/DB/: database.py
whseo_work/fastapi/goemotions/: model.py  pipeline.py  recomm_test.py  service_back.py
whseo_work/fastapi/mymodels/: user.py
whseo_work/fastapi/youtube/: youtube.py
whseo_work/frontend/: README.md
work/fastapi/: __main__.py  requirements.txt
work/fastapi/goemotions/: model.py  model_back.py  recomm_test.py  save.py  service.py
work/fastapi/youtube/: youtube_test.py
work/frontend/: README.md
work/proxy/: nginx.conf
(+27 files in other folders)
