[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, !=3.9.7"
fastapi = "^0.100.0"
pytest = "^7.4.0"
uvicorn = "^0.22.0"
black = "^23.3.0"
mysql = "^0.0.3"
SQLAlchemy = "^2.0.18"
pydantic = "^2.0.2"
torch = "^2.0.1"
transformers = "^4.30.2"
attrdict = "^2.0.1"
streamlit = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
